test/deca/context/invalid/3_18_method_body_bloc2.deca
// Description:
//    instruction avant declaration des variables
//
// Resultats:
//    Ligne 8

class A {
   void rien(int a) {
      int c = 3;
      a = a+c;
      int b = 2;
   }
}
